Fixed bug#13323 - Visibility issues in SysConfig settings with large number of list items.

--- a/scripts/test/sample/Loader/OTRS.Reset.css
+++ b/scripts/test/sample/Loader/OTRS.Reset.css
@@ -93,4 +93,14 @@ select {
 }
 
 
+/**
+ * @note   Chrome introduced a default border-radius on buttons in v62.
+ *         (will be reverted, though, see https://github.com/necolas/normalize.css/issues/706)
+ */
+
+button {
+    border-radius: 0px;
+}
+
+
 } /* end @media */
